[package]
name = "streaming-stats"
version = "0.2.2"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Experimental crate for computing basic statistics on streams."
documentation = "http://burntsushi.net/rustdoc/stats/"
homepage = "https://github.com/BurntSushi/rust-stats"
repository = "https://github.com/BurntSushi/rust-stats"
readme = "README.md"
keywords = ["statistics", "stats", "median", "mean", "stddev"]
license = "Unlicense/MIT"

[features]
default = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd", "std"]
std = []

[lib]
name = "stats"

[dependencies]
num-traits   = { rev ="c61f79b76ea95b7001e1b03abf7fe9d6ea895fc2",git = "https://github.com/mesalock-linux/num-traits-sgx" }
sgx_tstd = { rev = "v1.0.8", git = "https://github.com/baidu/rust-sgx-sdk.git", optional = true }